# FastMDSimulation

./: .coveragerc  .gitignore  13  README.md  environment.gpu.yml  environment.yml  install_cuda.bat  install_cuda.sh  pyproject.toml  pytest.ini  tree.txt
.github/workflows/: conda-forge.yml  tests.yml
assets/: pytest.mermaid
docs/: conf.py  guide.md  index.md  quickstart.md
examples/: config_quick.yml  job_full.yml  job_full_template.yml  pbs_options.yml  protein_ligand.yml  slurm_options.yml
examples/trpcage/: config_trpcage.yml
examples/waterbox/: job.yml  water2nm.yml
recipe/: meta.yaml
scripts/: submit_pbs_with_analysis.sh  submit_slurm_with_analysis.sh
src/fastmdsimulation/: __init__.py  api.py  cli.py
src/fastmdsimulation/core/: ligand.py  orchestrator.py  pdbfix.py  simulate.py
src/fastmdsimulation/engines/: openmm_engine.py  plumed_support.py
src/fastmdsimulation/reporting/: analysis_bridge.py
tests/: conftest.py  test_cli.py  test_cli_imports.py  test_core.py  test_init.py
tests/cli/: test_main.py
tests/engines/: test_openmm_comprehensive.py  test_openmm_configuration.py  test_openmm_core.py  test_openmm_edge_cases.py  test_openmm_error_handling.py  test_openmm_file_formats.py  test_openmm_helpers.py  test_openmm_integration.py  test_openmm_integration_extended.py  test_openmm_integrators.py  test_openmm_stages.py  test_openmm_system_building.py  test_openmm_system_creation.py  test_plumed_support.py
tests/utils/: test_console_logging.py  test_file_logging.py  test_formatters.py  test_helpers.py  test_logger_management.py
(+6 files in other folders)
